--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,163 +3,184 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db7b054d",
+   "id": "d5c706f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import tkinter as tk\n",
-    "from tkinter import ttk, filedialog, messagebox\n",
+    "from tkinter import filedialog, messagebox, ttk\n",
     "import os\n",
     "\n",
-    "# ----------------------------\n",
-    "# Constants (from Phase 1/2)\n",
-    "# ----------------------------\n",
-    "EMP_ID_COL = \"Employee ID\"\n",
-    "EMP_NAME_COL = \"Employee Name\"\n",
-    "EMP_EMAIL_COL = \"Employee Business Email Address\"\n",
-    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
-    "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
-    "GCB_COL = \"Global Career Band\"\n",
+    "# -----------------------------\n",
+    "# Recursive slicing function\n",
+    "# -----------------------------\n",
+    "def get_hierarchy_slice(df, manager_id):\n",
+    "    \"\"\"Return all employees (direct/indirect) under manager_id in order.\"\"\"\n",
+    "    result = []\n",
     "\n",
-    "# ----------------------------\n",
-    "# Function to recursively get all reports\n",
-    "# ----------------------------\n",
-    "def get_all_reports(df, manager_id):\n",
-    "    \"\"\"Return all employees reporting directly or indirectly to manager_id\"\"\"\n",
-    "    reports_list = []\n",
+    "    def recurse(mid):\n",
+    "        reports = df[df['Entity Manager Employee ID'] == mid]\n",
+    "        for _, r in reports.iterrows():\n",
+    "            result.append(r)\n",
+    "            recurse(r['Employee ID'])\n",
+    "    \n",
+    "    # Add manager row itself\n",
+    "    manager_row = df[df['Employee ID'] == manager_id]\n",
+    "    if not manager_row.empty:\n",
+    "        result.append(manager_row.iloc[0])\n",
+    "        recurse(manager_id)\n",
+    "    return pd.DataFrame(result)\n",
     "\n",
-    "    def recurse(mgr_id):\n",
-    "        subs = df[df[MGR_ID_COL] == mgr_id]\n",
-    "        for _, row in subs.iterrows():\n",
-    "            reports_list.append(row.to_dict())\n",
-    "            recurse(row[EMP_ID_COL])\n",
+    "# -----------------------------\n",
+    "# GUI Application\n",
+    "# -----------------------------\n",
+    "class Phase3GUI:\n",
+    "    def __init__(self, master):\n",
+    "        self.master = master\n",
+    "        master.title(\"Phase 3: Hierarchy Slice Utility\")\n",
+    "        master.geometry(\"700x400\")\n",
     "\n",
-    "    recurse(manager_id)\n",
-    "    return pd.DataFrame(reports_list)\n",
+    "        # ---------------- Input File ----------------\n",
+    "        tk.Label(master, text=\"Hierarchy Report File:\").grid(row=0, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.input_file_var = tk.StringVar()\n",
+    "        tk.Entry(master, textvariable=self.input_file_var, width=50).grid(row=0, column=1, padx=5)\n",
+    "        tk.Button(master, text=\"Browse\", command=self.browse_input_file).grid(row=0, column=2, padx=5)\n",
     "\n",
-    "# ----------------------------\n",
-    "# Function to export slice for a manager\n",
-    "# ----------------------------\n",
-    "def export_slice(df, manager_name, manager_id, outdir):\n",
-    "    subset_df = get_all_reports(df, manager_id)\n",
-    "    # Include manager record itself\n",
-    "    mgr_record = df[df[EMP_ID_COL] == manager_id]\n",
-    "    final_df = pd.concat([mgr_record, subset_df], ignore_index=True)\n",
+    "        # ---------------- Output Folder ----------------\n",
+    "        tk.Label(master, text=\"Output Folder:\").grid(row=1, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.output_folder_var = tk.StringVar()\n",
+    "        tk.Entry(master, textvariable=self.output_folder_var, width=50).grid(row=1, column=1, padx=5)\n",
+    "        tk.Button(master, text=\"Browse\", command=self.browse_output_folder).grid(row=1, column=2, padx=5)\n",
     "\n",
-    "    # Summary calculations\n",
-    "    total_emp = len(final_df)\n",
-    "    gcb3_count = len(final_df[final_df[GCB_COL] == 3])\n",
-    "    gcb4_count = len(final_df[final_df[GCB_COL] == 4])\n",
-    "    per_gcb3 = final_df[final_df[GCB_COL] == 3].groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
-    "    per_gcb3.columns = [\"GCB3 Name\", \"Direct Reports\"]\n",
-    "    per_gcb4 = final_df[final_df[GCB_COL] == 4].groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
-    "    per_gcb4.columns = [\"GCB4 Name\", \"Direct Reports\"]\n",
+    "        # ---------------- Manager Selection ----------------\n",
+    "        tk.Label(master, text=\"Select Manager Name:\").grid(row=2, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.manager_cb = ttk.Combobox(master, width=47, state=\"readonly\")\n",
+    "        self.manager_cb.grid(row=2, column=1, padx=5)\n",
+    "        tk.Button(master, text=\"Load Managers\", command=self.load_managers).grid(row=2, column=2, padx=5)\n",
     "\n",
-    "    # Save to Excel\n",
-    "    out_file = os.path.join(outdir, f\"{manager_name}_{manager_id}_slice.xlsx\")\n",
-    "    with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
-    "        final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
-    "        # Summary stacked\n",
-    "        start_row = 0\n",
-    "        summary_tables = [\n",
-    "            (\"Summary\", pd.DataFrame([{\"Metric\": \"Manager Name\", \"Value\": manager_name},\n",
-    "                                      {\"Metric\": \"Manager ID\", \"Value\": manager_id},\n",
-    "                                      {\"Metric\": \"Total Employees\", \"Value\": total_emp},\n",
-    "                                      {\"Metric\": \"GCB3 Count\", \"Value\": gcb3_count},\n",
-    "                                      {\"Metric\": \"GCB4 Count\", \"Value\": gcb4_count}])),\n",
-    "            (\"GCB3 Details\", per_gcb3),\n",
-    "            (\"GCB4 Details\", per_gcb4)\n",
-    "        ]\n",
-    "        for title, df_table in summary_tables:\n",
-    "            pd.DataFrame([[title]]).to_excel(writer, index=False, header=False, sheet_name=\"Summary\", startrow=start_row)\n",
-    "            start_row += 1\n",
-    "            df_table.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
-    "            start_row += len(df_table) + 2\n",
-    "    print(f\"✅ Slice saved → {out_file}\")\n",
+    "        # ---------------- GCB Level Selection ----------------\n",
+    "        tk.Label(master, text=\"Select GCB Level (for Generate All):\").grid(row=3, column=0, sticky=\"w\", padx=10, pady=5)\n",
+    "        self.gcb_level_cb = ttk.Combobox(master, values=[3,4,5,6,7,8], width=10, state=\"readonly\")\n",
+    "        self.gcb_level_cb.grid(row=3, column=1, sticky=\"w\", padx=5)\n",
     "\n",
-    "# ----------------------------\n",
-    "# GUI Function\n",
-    "# ----------------------------\n",
-    "def run_phase3_gui():\n",
-    "    # Load hierarchy file\n",
-    "    file_path = filedialog.askopenfilename(title=\"Select Hierarchy Report file\",\n",
-    "                                           filetypes=[(\"Excel files\", \"*.xlsx\")])\n",
-    "    if not file_path:\n",
-    "        return\n",
+    "        # ---------------- Buttons ----------------\n",
+    "        tk.Button(master, text=\"Generate Slice for Selected Manager\", command=self.slice_selected_manager).grid(row=4, column=0, columnspan=2, pady=10)\n",
+    "        tk.Button(master, text=\"Generate Slices for All at GCB Level\", command=self.slice_all_at_level).grid(row=5, column=0, columnspan=2, pady=10)\n",
     "\n",
-    "    df = pd.read_excel(file_path, sheet_name=\"Hierarchy Report\")\n",
-    "    df.columns = df.columns.str.strip()\n",
+    "        # ---------------- Status ----------------\n",
+    "        self.status_var = tk.StringVar()\n",
+    "        tk.Label(master, textvariable=self.status_var, fg=\"blue\").grid(row=6, column=0, columnspan=3, pady=10)\n",
     "\n",
-    "    root = tk.Tk()\n",
-    "    root.title(\"Phase 3 - Hierarchy Slice Utility\")\n",
+    "    # ---------------- Browse Functions ----------------\n",
+    "    def browse_input_file(self):\n",
+    "        filename = filedialog.askopenfilename(filetypes=[(\"Excel files\",\"*.xlsx\")])\n",
+    "        if filename:\n",
+    "            self.input_file_var.set(filename)\n",
     "\n",
-    "    tk.Label(root, text=\"Select Manager Name:\").grid(row=0, column=0, padx=10, pady=5, sticky=\"w\")\n",
+    "    def browse_output_folder(self):\n",
+    "        folder = filedialog.askdirectory()\n",
+    "        if folder:\n",
+    "            self.output_folder_var.set(folder)\n",
     "\n",
-    "    # Unique manager names from Entity Manager column\n",
-    "    mgr_names = sorted(df[MGR_NAME_COL].dropna().unique())\n",
-    "    manager_var = tk.StringVar()\n",
-    "    mgr_cb = ttk.Combobox(root, state=\"readonly\", values=mgr_names, textvariable=manager_var)\n",
-    "    mgr_cb.grid(row=0, column=1, padx=5, pady=5)\n",
-    "\n",
-    "    tk.Label(root, text=\"Select GCB Level for 'Generate All':\").grid(row=0, column=2, padx=10, pady=5, sticky=\"w\")\n",
-    "    level_var = tk.StringVar()\n",
-    "    level_cb = ttk.Combobox(root, state=\"readonly\", values=[3,4,5,6,7,8], textvariable=level_var)\n",
-    "    level_cb.grid(row=0, column=3, padx=5, pady=5)\n",
-    "    level_cb.current(0)\n",
-    "\n",
-    "    # Output folder selection\n",
-    "    tk.Label(root, text=\"Output Folder:\").grid(row=1, column=0, padx=10, pady=5, sticky=\"w\")\n",
-    "    outdir_var = tk.StringVar()\n",
-    "    outdir_entry = tk.Entry(root, textvariable=outdir_var, width=50)\n",
-    "    outdir_entry.grid(row=1, column=1, padx=5, pady=5, columnspan=2)\n",
-    "\n",
-    "    def browse_folder():\n",
-    "        folder_selected = filedialog.askdirectory()\n",
-    "        if folder_selected:\n",
-    "            outdir_var.set(folder_selected)\n",
-    "    tk.Button(root, text=\"Browse\", command=browse_folder).grid(row=1, column=3, padx=5, pady=5)\n",
-    "\n",
-    "    # Action buttons\n",
-    "    def generate_single():\n",
-    "        mgr_name = manager_var.get()\n",
-    "        if not mgr_name:\n",
-    "            messagebox.showwarning(\"Warning\", \"Please select a manager name\")\n",
+    "    # ---------------- Load Manager Names ----------------\n",
+    "    def load_managers(self):\n",
+    "        file = self.input_file_var.get()\n",
+    "        if not file or not os.path.exists(file):\n",
+    "            messagebox.showerror(\"Error\", \"Please select a valid Hierarchy Report file\")\n",
     "            return\n",
-    "        # Get all IDs for that name\n",
-    "        mgr_ids = df[df[MGR_NAME_COL]==mgr_name][EMP_ID_COL].unique()\n",
-    "        if len(mgr_ids) >1:\n",
-    "            # If multiple IDs, ask which one\n",
-    "            id_win = tk.Toplevel(root)\n",
-    "            id_win.title(f\"Select ID for {mgr_name}\")\n",
-    "            tk.Label(id_win, text=f\"Select Manager ID for {mgr_name}:\").pack(padx=10, pady=5)\n",
-    "            id_var = tk.StringVar()\n",
-    "            id_cb = ttk.Combobox(id_win, values=mgr_ids, textvariable=id_var)\n",
-    "            id_cb.pack(padx=10, pady=5)\n",
-    "            def select_id():\n",
-    "                export_slice(df, mgr_name, id_var.get(), outdir_var.get())\n",
-    "                id_win.destroy()\n",
-    "            tk.Button(id_win, text=\"Generate Slice\", command=select_id).pack(padx=10, pady=10)\n",
+    "        self.df = pd.read_excel(file, sheet_name=\"Hierarchy Report\")\n",
+    "        # Create a map: Name -> list of IDs\n",
+    "        self.name_to_ids = self.df.groupby('Employee Name')['Employee ID'].apply(list).to_dict()\n",
+    "        self.manager_cb['values'] = list(self.name_to_ids.keys())\n",
+    "        self.status_var.set(f\"Loaded {len(self.name_to_ids)} manager names.\")\n",
+    "\n",
+    "    # ---------------- Slice Selected Manager ----------------\n",
+    "    def slice_selected_manager(self):\n",
+    "        name = self.manager_cb.get()\n",
+    "        out_folder = self.output_folder_var.get()\n",
+    "        if not name:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a manager name\")\n",
+    "            return\n",
+    "        if not out_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder\")\n",
+    "            return\n",
+    "\n",
+    "        ids = self.name_to_ids.get(name, [])\n",
+    "        if len(ids) > 1:\n",
+    "            # If multiple IDs for same name, ask user to select one\n",
+    "            id_select_win = tk.Toplevel(self.master)\n",
+    "            id_select_win.title(f\"Select Manager ID for {name}\")\n",
+    "            tk.Label(id_select_win, text=f\"Select Manager ID for {name}:\").pack(pady=5)\n",
+    "            selected_id_var = tk.StringVar()\n",
+    "            cb = ttk.Combobox(id_select_win, values=ids, textvariable=selected_id_var, state=\"readonly\")\n",
+    "            cb.pack(pady=5)\n",
+    "            def confirm_id():\n",
+    "                manager_id = selected_id_var.get()\n",
+    "                if manager_id:\n",
+    "                    self.generate_slice(manager_id, name, out_folder)\n",
+    "                    id_select_win.destroy()\n",
+    "            tk.Button(id_select_win, text=\"Confirm\", command=confirm_id).pack(pady=5)\n",
+    "            return\n",
+    "        elif len(ids) == 0:\n",
+    "            messagebox.showerror(\"Error\", f\"No manager ID found for {name}\")\n",
+    "            return\n",
     "        else:\n",
-    "            export_slice(df, mgr_name, mgr_ids[0], outdir_var.get())\n",
+    "            manager_id = ids[0]\n",
+    "            self.generate_slice(manager_id, name, out_folder)\n",
     "\n",
-    "    def generate_all():\n",
-    "        level = int(level_var.get())\n",
-    "        outdir = outdir_var.get()\n",
-    "        managers = df[df[GCB_COL]==level][[EMP_ID_COL, EMP_NAME_COL]].drop_duplicates()\n",
+    "    # ---------------- Slice All at GCB Level ----------------\n",
+    "    def slice_all_at_level(self):\n",
+    "        level = self.gcb_level_cb.get()\n",
+    "        out_folder = self.output_folder_var.get()\n",
+    "        if not level:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a GCB level\")\n",
+    "            return\n",
+    "        if not out_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder\")\n",
+    "            return\n",
+    "        level = int(level)\n",
+    "        managers = self.df[self.df['Global Career Band']==level][['Employee ID','Employee Name']].drop_duplicates()\n",
     "        for _, row in managers.iterrows():\n",
-    "            export_slice(df, row[EMP_NAME_COL], row[EMP_ID_COL], outdir)\n",
+    "            self.generate_slice(row['Employee ID'], row['Employee Name'], out_folder)\n",
     "\n",
-    "    tk.Button(root, text=\"Generate Slice for Selected Manager\", command=generate_single).grid(row=2, column=0, padx=10, pady=10)\n",
-    "    tk.Button(root, text=\"Generate Slices for All at Level\", command=generate_all).grid(row=2, column=1, padx=10, pady=10)\n",
+    "    # ---------------- Generate Slice ----------------\n",
+    "    def generate_slice(self, manager_id, manager_name, out_folder):\n",
+    "        sliced_df = get_hierarchy_slice(self.df, manager_id)\n",
+    "        if sliced_df.empty:\n",
+    "            messagebox.showinfo(\"Info\", f\"No records found under {manager_name}\")\n",
+    "            return\n",
+    "        # Summary sheet\n",
+    "        total_emp = len(sliced_df)\n",
+    "        total_gcb3 = len(sliced_df[sliced_df['Global Career Band']==3])\n",
+    "        total_gcb4 = len(sliced_df[sliced_df['Global Career Band']==4])\n",
+    "        per_gcb3 = sliced_df[sliced_df['Global Career Band']==3].groupby('Employee Name')['Employee ID'].count().reset_index(name='Count')\n",
+    "        per_gcb4 = sliced_df[sliced_df['Global Career Band']==4].groupby('Employee Name')['Employee ID'].count().reset_index(name='Count')\n",
     "\n",
-    "    root.mainloop()\n",
+    "        # Save Excel\n",
+    "        file_path = os.path.join(out_folder, f\"{manager_name}_slice.xlsx\")\n",
+    "        with pd.ExcelWriter(file_path, engine=\"openpyxl\") as writer:\n",
+    "            sliced_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Slice\")\n",
+    "            # Summary stacked\n",
+    "            start_row = 0\n",
+    "            summary = pd.DataFrame([[\"Manager Name\", manager_name], [\"Manager ID\", manager_id], [\"Total Employees\", total_emp]])\n",
+    "            summary.to_excel(writer, index=False, header=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(summary) + 1\n",
+    "            pd.DataFrame([[\"Total GCB3\", total_gcb3], [\"Total GCB4\", total_gcb4]]).to_excel(writer, index=False, header=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += 3\n",
+    "            per_gcb3.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(per_gcb3) + 2\n",
+    "            per_gcb4.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "        self.status_var.set(f\"Slice for {manager_name} saved → {file_path}\")\n",
+    "        messagebox.showinfo(\"Success\", f\"Slice for {manager_name} saved successfully!\")\n",
     "\n",
-    "# ----------------------------\n",
-    "# Run Phase 3 GUI\n",
-    "# ----------------------------\n",
+    "# -----------------------------\n",
+    "# Main\n",
+    "# -----------------------------\n",
     "if __name__ == \"__main__\":\n",
-    "    run_phase3_gui()\n"
+    "    root = tk.Tk()\n",
+    "    app = Phase3GUI(root)\n",
+    "    root.mainloop()\n"
    ]
   },
   {
