--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,210 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c706f7",
+   "id": "71975514",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, messagebox, ttk\n",
+    "import os\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Utility: get hierarchy slice\n",
+    "# -----------------------------\n",
+    "def get_hierarchy_slice(df, manager_id):\n",
+    "    \"\"\"Return all employees reporting directly/indirectly to manager_id.\"\"\"\n",
+    "    slice_rows = []\n",
+    "    visited = set()\n",
+    "\n",
+    "    def recurse(mid):\n",
+    "        reports = df[df['Entity Manager Employee ID'] == mid]\n",
+    "        for _, r in reports.iterrows():\n",
+    "            eid = r['Employee ID']\n",
+    "            if eid not in visited:\n",
+    "                visited.add(eid)\n",
+    "                slice_rows.append(r.to_dict())\n",
+    "                recurse(eid)\n",
+    "\n",
+    "    recurse(manager_id)\n",
+    "    return pd.DataFrame(slice_rows)\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Utility: generate summary\n",
+    "# -----------------------------\n",
+    "def generate_summary(sliced_df, manager_name, manager_id):\n",
+    "    summary = []\n",
+    "    total_emps = len(sliced_df)\n",
+    "    summary.append({\"Metric\": f\"Manager Name\", \"Value\": manager_name})\n",
+    "    summary.append({\"Metric\": f\"Manager ID\", \"Value\": manager_id})\n",
+    "    summary.append({\"Metric\": \"Total Employees (direct+indirect)\", \"Value\": total_emps})\n",
+    "    \n",
+    "    # Count of GCB3 and GCB4 reporting to this manager\n",
+    "    gcb3_count = sliced_df[sliced_df['Global Career Band'] == 3]['Employee ID'].nunique()\n",
+    "    gcb4_count = sliced_df[sliced_df['Global Career Band'] == 4]['Employee ID'].nunique()\n",
+    "    summary.append({\"Metric\": \"Total GCB3 reporting\", \"Value\": gcb3_count})\n",
+    "    summary.append({\"Metric\": \"Total GCB4 reporting\", \"Value\": gcb4_count})\n",
+    "    \n",
+    "    # Counts per GCB3/GCB4\n",
+    "    per_gcb3 = sliced_df[sliced_df['Global Career Band'] == 3].groupby('Employee Name')['Employee ID'].count().reset_index()\n",
+    "    per_gcb4 = sliced_df[sliced_df['Global Career Band'] == 4].groupby('Employee Name')['Employee ID'].count().reset_index()\n",
+    "    \n",
+    "    return summary, per_gcb3, per_gcb4\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Phase 3 GUI\n",
+    "# -----------------------------\n",
+    "class Phase3GUI:\n",
+    "    def __init__(self, master):\n",
+    "        self.master = master\n",
+    "        self.master.title(\"Phase 3: Slice Hierarchy Report\")\n",
+    "\n",
+    "        self.df = None\n",
+    "        self.output_folder = \"\"\n",
+    "\n",
+    "        # --- Input file ---\n",
+    "        tk.Label(master, text=\"Hierarchy Report File:\").grid(row=0, column=0, sticky='w')\n",
+    "        self.input_entry = tk.Entry(master, width=50)\n",
+    "        self.input_entry.grid(row=0, column=1)\n",
+    "        tk.Button(master, text=\"Browse\", command=self.browse_file).grid(row=0, column=2)\n",
+    "\n",
+    "        # --- Manager selection ---\n",
+    "        tk.Label(master, text=\"Select Manager Name:\").grid(row=1, column=0, sticky='w')\n",
+    "        self.manager_combo = ttk.Combobox(master, width=47)\n",
+    "        self.manager_combo.grid(row=1, column=1, columnspan=2)\n",
+    "        self.manager_combo['state'] = 'normal'\n",
+    "\n",
+    "        # --- Output folder ---\n",
+    "        tk.Label(master, text=\"Output Folder:\").grid(row=2, column=0, sticky='w')\n",
+    "        self.output_entry = tk.Entry(master, width=50)\n",
+    "        self.output_entry.grid(row=2, column=1)\n",
+    "        tk.Button(master, text=\"Browse\", command=self.browse_output).grid(row=2, column=2)\n",
+    "\n",
+    "        # --- Buttons ---\n",
+    "        tk.Button(master, text=\"Generate Slice for Selected Manager\", command=self.generate_selected_slice).grid(row=3, column=0, columnspan=3, pady=5, sticky='ew')\n",
+    "        tk.Button(master, text=\"Generate Slices for All at GCB Level\", command=self.generate_all_slices).grid(row=4, column=0, columnspan=3, pady=5, sticky='ew')\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # File browse\n",
+    "    # -----------------------------\n",
+    "    def browse_file(self):\n",
+    "        file_path = filedialog.askopenfilename(title=\"Select Hierarchy Report Excel file\",\n",
+    "                                               filetypes=[(\"Excel files\", \"*.xlsx *.xls\")])\n",
+    "        if file_path:\n",
+    "            self.input_entry.delete(0, tk.END)\n",
+    "            self.input_entry.insert(0, file_path)\n",
+    "            self.load_hierarchy(file_path)\n",
+    "\n",
+    "    def load_hierarchy(self, file_path):\n",
+    "        self.df = pd.read_excel(file_path, sheet_name=\"Hierarchy Report\")\n",
+    "        self.df.columns = self.df.columns.str.strip()\n",
+    "\n",
+    "        # Filter managers: employees who appear as Entity Manager for someone\n",
+    "        manager_ids = self.df['Entity Manager Employee ID'].dropna().unique()\n",
+    "        managers_df = self.df[self.df['Employee ID'].isin(manager_ids)][['Employee Name', 'Employee ID']].drop_duplicates()\n",
+    "        managers_df['Display'] = managers_df['Employee Name'] + \" | \" + managers_df['Employee ID'].astype(str)\n",
+    "        self.manager_combo['values'] = managers_df['Display'].tolist()\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # Output folder browse\n",
+    "    # -----------------------------\n",
+    "    def browse_output(self):\n",
+    "        folder = filedialog.askdirectory(title=\"Select Output Folder\")\n",
+    "        if folder:\n",
+    "            self.output_folder = folder\n",
+    "            self.output_entry.delete(0, tk.END)\n",
+    "            self.output_entry.insert(0, folder)\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # Generate slice for selected manager\n",
+    "    # -----------------------------\n",
+    "    def generate_selected_slice(self):\n",
+    "        if self.df is None:\n",
+    "            messagebox.showerror(\"Error\", \"Please select Hierarchy Report file first!\")\n",
+    "            return\n",
+    "        if not self.output_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder!\")\n",
+    "            return\n",
+    "        selected = self.manager_combo.get()\n",
+    "        if not selected:\n",
+    "            messagebox.showerror(\"Error\", \"Please select a manager from the list!\")\n",
+    "            return\n",
+    "        manager_name, manager_id = selected.split(\" | \")\n",
+    "        manager_id = str(manager_id).strip()\n",
+    "\n",
+    "        sliced_df = get_hierarchy_slice(self.df, manager_id)\n",
+    "        # Exclude the selected manager's own record\n",
+    "        sliced_df = sliced_df[sliced_df['Employee ID'] != manager_id]\n",
+    "\n",
+    "        # Summary\n",
+    "        summary, per_gcb3, per_gcb4 = generate_summary(sliced_df, manager_name, manager_id)\n",
+    "\n",
+    "        # Save to Excel\n",
+    "        out_file = os.path.join(self.output_folder, f\"{manager_name}_{manager_id}_slice.xlsx\")\n",
+    "        with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "            sliced_df.to_excel(writer, index=False, sheet_name=\"Slice\")\n",
+    "            pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
+    "            if not per_gcb3.empty:\n",
+    "                per_gcb3.to_excel(writer, index=False, sheet_name=\"GCB3 Counts\")\n",
+    "            if not per_gcb4.empty:\n",
+    "                per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Counts\")\n",
+    "\n",
+    "        messagebox.showinfo(\"Done\", f\"Slice for {manager_name} saved at:\\n{out_file}\")\n",
+    "\n",
+    "    # -----------------------------\n",
+    "    # Generate slices for all at a GCB level\n",
+    "    # -----------------------------\n",
+    "    def generate_all_slices(self):\n",
+    "        if self.df is None:\n",
+    "            messagebox.showerror(\"Error\", \"Please select Hierarchy Report file first!\")\n",
+    "            return\n",
+    "        if not self.output_folder:\n",
+    "            messagebox.showerror(\"Error\", \"Please select output folder!\")\n",
+    "            return\n",
+    "\n",
+    "        # Ask for GCB level\n",
+    "        gcb_level = tk.simpledialog.askinteger(\"GCB Level\", \"Enter GCB Level (e.g., 3 or 4):\", minvalue=1)\n",
+    "        if gcb_level is None:\n",
+    "            return\n",
+    "\n",
+    "        # Find all managers at this GCB level\n",
+    "        manager_ids = self.df[self.df['Global Career Band'] == gcb_level]['Employee ID'].unique()\n",
+    "        manager_ids = [str(mid) for mid in manager_ids]\n",
+    "\n",
+    "        for mid in manager_ids:\n",
+    "            sliced_df = get_hierarchy_slice(self.df, mid)\n",
+    "            sliced_df = sliced_df[sliced_df['Employee ID'] != mid]\n",
+    "            manager_name = self.df.loc[self.df['Employee ID'] == mid, 'Employee Name'].values[0]\n",
+    "            summary, per_gcb3, per_gcb4 = generate_summary(sliced_df, manager_name, mid)\n",
+    "\n",
+    "            out_file = os.path.join(self.output_folder, f\"{manager_name}_{mid}_slice.xlsx\")\n",
+    "            with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "                sliced_df.to_excel(writer, index=False, sheet_name=\"Slice\")\n",
+    "                pd.DataFrame(summary).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
+    "                if not per_gcb3.empty:\n",
+    "                    per_gcb3.to_excel(writer, index=False, sheet_name=\"GCB3 Counts\")\n",
+    "                if not per_gcb4.empty:\n",
+    "                    per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Counts\")\n",
+    "\n",
+    "        messagebox.showinfo(\"Done\", f\"All slices for GCB Level {gcb_level} saved in:\\n{self.output_folder}\")\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Main\n",
+    "# -----------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    app = Phase3GUI(root)\n",
+    "    root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a2aaa28",
    "metadata": {},
    "outputs": [],
    "source": [
